ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ft_services
spec:
  selector:
    app: ft_services
    tier: ftps
spec:
  ports:
  - name: ftp
    port: 21
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: ft_services
  template:
    metadata:
      labels:
        app: ft_services
        tier: nginx
    spec:
      containers:
      - name: nginx
        image: 42nginx:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
