nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: ft_services
spec:
  selector:
    app: ft_services
    tier: nginx
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: ssh
    port: 22
    targetPort: 22
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: ft_services
  template:
    metadata:
      labels:
        app: ft_services
        tier: nginx
    spec:
      containers:
      - name: nginx
        image: 42nginx:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
