php.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  annotations:
    metallb.universe.tf/allow-shared-ip: "sharing key"
  labels:
    app: ft_services
spec:
  type: LoadBalancer
  loadBalancerIP: ${EXTERNAL_IP}
  ports:
    - name: phpmyadmin
      port: 5000
      targetPort: 5000
  selector:
    app: ft_services
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: phpmyadmin
  labels:
    app: ft_services
spec:
  serviceName: phpmyadmin
  replicas: 1
  selector:
    matchLabels:
      app: ft_services
  template:
    metadata:
      labels:
        app: ft_services
    spec:
      containers:
      - name: phpmyadmin
        image: 42phpmyadmin
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
          name: phpmyadmin
